--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,8 @@
     <string name="title_income">Пополнить</string>
     <string name="hello_world">Hello world!</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="add_widget">Add widget</string>
+    <string name="make_expence_widget_btn_label">Потратить</string>
+    <string name="make_income_widget_btn_label">Пополнить</string>
 
 </resources>
